objects/Expense__c.object
<CustomObject>
    <description>The total expense for food..</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Total Amount of the Expense</description>
        <inlineHelpText>Give the total amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of the Expense..</description>
        <inlineHelpText>Enter the Date of the Expense</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Name of the Event for the Expense</description>
        <inlineHelpText>Give the Event Name for the Expense</inlineHelpText>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contributed__c</fullName>
        <description>Total Contribution of members..</description>
        <label>Total Contributed</label>
        <summarizedField>Expense_Member__c.Contributed_Amount__c</summarizedField>
        <summaryForeignKey>Expense_Member__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ex-{0000}</displayFormat>
        <label>Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contribution_Rule</fullName>
        <active>true</active>
        <description>Rule for Contribution</description>
        <errorConditionFormula>Total_Contributed__c &gt;  Amount__c</errorConditionFormula>
        <errorMessage>Total Contributed Amount must not be greater than Total Expense Amount..</errorMessage>
    </validationRules>
</CustomObject>